--- a/index.html
+++ b/index.html
@@ -96,8 +96,40 @@
           </div>
       </section>
       <!-- "your trainers" section -->
-      <section>
-          <h2>Your Trainers</h2>
+      <section id="your-trainers" class="trainers">
+          <h2 class="section-title primary-border">Meet the Trainers</h2>
+          <article class="trainer">
+              <img src="./images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+              <div class="trainer-bio text-left">
+                  <h3>Arron Stephens</h3>
+                  <h4>Speed / Strength</h4>
+                  <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dicta consequatur cum. Sit nobis molestias ea, reprehenderit facere sequi sunt debitis veritatis minima praesentium quos quidem esse. Quae, recusandae tempora!
+                  </p>
+              </div>
+          </article>
+          <!-- second trainer bio -->
+          <article class="trainer">
+              <div class="trainer-bio text-right">
+                  <h3>Joanna Gill</h3>
+                  <h4>Endurance</h4>
+                  <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod obcaecati, quos iusto minus qui optio autem nisi aliquam temporibus necessitatibus laboriosam porro rerum odio nobis similique debitis, quibusdam veritatis perferendis?
+                  </p>
+              </div>
+              <img src="./images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+          </article>
+          <!-- third trainer bio-->
+          <article class="trainer">
+              <img src="./images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+              <div class="trainer-bio text-left">
+                  <h3>Harry "the Headband" Smith</h3>
+                  <h4>Strength</h4>
+                  <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda neque, cupiditate facere commodi enim dolorum alias ullam, ratione voluptate animi soluta. Culpa maiores, magnam accusamus dolore dignissimos excepturi omnis. Dolor!
+                  </p>
+              </div>
+          </article>
       </section>
       <!-- "reach out" section-->
       <section>
