--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
       </header>  
       <!-- hero/jumbotron -->
       <section class="hero">
+          <div class="hero-cta">
+              <h2>Start Building Habits</h2>
+              <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid est voluptatem exercitationem nobis consectetur temporibus tempora impedit quidem incidunt neque, obcaecati labore perferendis, laboriosam facilis eveniet sequi nisi corporis? Dolores.
+              </p>
+          </div>
           <div class="hero-form">
               <h3>Get Started Today</h3>
               <p>Fill out this form and one of our trainers will schedule a consult</p>
