--- a/index.html
+++ b/index.html
@@ -72,14 +72,20 @@
       <!-- end hero -->
       <!-- "what we do" section -->
       <section id="what-we-do" class="intro">
+          <div class="flex-row">
         <h2 class="section-title primary-border">What We Do </h2>
+           </div>
+        <div class="flex-row">
         <p>
             butcher selfies gentrify shabby chic readymade yr EchoPark XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee syth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
         </p>
+        </div>
       </section>
       <!-- "what you do" section -->
       <section id="what-you-do" class="steps">
+          <div class="flex-row">
           <h2 class="section-title secondary-border">What You Do</h2>
+          </div>
           <div>
               <img src="./images/step-1.svg" alt="" />
               <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -103,7 +109,9 @@
       </section>
       <!-- "your trainers" section -->
       <section id="your-trainers" class="trainers">
+          <div class="flex-row">
           <h2 class="section-title primary-border">Meet the Trainers</h2>
+          </div>
           <article class="trainer">
               <img src="./images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
               <div class="trainer-bio text-left">
@@ -139,7 +147,9 @@
       </section>
       <!-- "reach out" section-->
       <section id="reach-out" class="contact">
+          <div class="flex-row">
           <h2 class="section-title secondary-border">Reach Out</h2>
+          </div>
           <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.201001389341!2d-118.60988645055426!3d34.19234041768889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c29c3cbf8f1e61%3A0xe73c4535c05b36c0!2s6670%20Glade%20Ave%2C%20Woodland%20Hills%2C%20CA%2091303!5e0!3m2!1sen!2sus!4v1628473822496!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <div class="contact-info" >
