--- a/index.html
+++ b/index.html
@@ -181,8 +181,22 @@
           <h2 class="section-title secondary-border">Reach Out</h2>
           </div>
           <div class="contact-info">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.201001389341!2d-118.60988645055426!3d34.19234041768889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c29c3cbf8f1e61%3A0xe73c4535c05b36c0!2s6670%20Glade%20Ave%2C%20Woodland%20Hills%2C%20CA%2091303!5e0!3m2!1sen!2sus!4v1628473822496!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            <div class="contact-info" >
+            <div>
+            <h3>Run Buddy</h3>
+            <p>
+                Any questions or concerns before signing up?
+                <br />
+                Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+                55 Main Street <br />
+                Some Town, Ca <br />
+                12345<br />
+                P: <a href="tel:555.786.2839">555.RUN.BUDZ (555.786.2839)</a><br />
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+            </address>
+            </div>
+            <div class="contact-form">
                 <h3>Contact Us</h3>
                 <form>
                     <label for="contact-name">Your Name</label>
@@ -194,21 +208,7 @@
                     <button type="submit">Submit</button>
                 </form>
             </div>
-          <div>
-              <h3>Run Buddy</h3>
-              <p>
-                  Any questions or concerns before signing up?
-                  <br />
-                  Let us know and we'll be happy to talk to you!
-              </p>
-              <address>
-                  55 Main Street <br />
-                  Some Town, Ca <br />
-                  12345<br />
-                  P: 555.RUN.BUDZ (555.786.2839)<br />
-                  E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-              </address>
-              </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.201001389341!2d-118.60988645055426!3d34.19234041768889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c29c3cbf8f1e61%3A0xe73c4535c05b36c0!2s6670%20Glade%20Ave%2C%20Woodland%20Hills%2C%20CA%2091303!5e0!3m2!1sen!2sus!4v1628473822496!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           </div>
       </section>
       <!-- footer -->
