--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="./assets/style.css" />
         <link rel="stylesheet" href="./assets/secondary-styles.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="UTF-8" />
         <title>Privacy Policy - RUN BUDDY</title>
     </head>
